--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
 }
 
 body {
-	background-color: #fff;
+	background-color: #e8fcef;
 	padding-top: 100px;
 }
 
@@ -27,7 +27,7 @@ header h1 {
 }
 
 form {
-	display: flex;
+	display: contents;
 	max-width: 640px;
 	width: 100%;
 	justify-content: space-between;
@@ -45,10 +45,11 @@ form input{
 form button {
 	background-color: green;
 	color: white;
-	font-size: 24px;
+	font-size: 30px;
 	font-weight: bold;
 	border: none;
 	cursor: pointer;
+	border-radius: 10px;
 }
 
 table {
